GameBoardTest, GameTest, PawnTest Refactor