@@ -1,17 +1,18 @@
+import it.units.sdm.quoridor.exceptions.BuilderException;
 import it.units.sdm.quoridor.exceptions.InvalidParameterException;
-import it.units.sdm.quoridor.exceptions.NumberOfWallsBelowZeroException;
-import it.units.sdm.quoridor.model.GameBoard;
-import it.units.sdm.quoridor.model.Tile;
-import it.units.sdm.quoridor.model.Pawn;
+import it.units.sdm.quoridor.model.*;
+import it.units.sdm.quoridor.model.builder.BuilderDirector;
+import it.units.sdm.quoridor.model.builder.StdQuoridorBuilder;
+import it.units.sdm.quoridor.utils.Position;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
-import org.junit.jupiter.params.provider.ValueSource;
-
-import java.awt.*;
 
 public class PawnTest {
+
+  BuilderDirector builderDirector;
+
+  /*
   @Test
   void constructorTest_startingTileIsConsistent() {
     GameBoard gameBoard = new GameBoard();
@@ -44,37 +45,44 @@ public class PawnTest {
     Pawn pawn = new Pawn(gameBoard.getStartingAndDestinationTiles().getFirst().getKey(), gameBoard.getStartingAndDestinationTiles().getFirst().getValue(), Color.black, 10);
     Assertions.assertEquals(Color.black, pawn.getColor());
   }
+*/
 
   @ParameterizedTest
   @CsvSource({"3,4", "7,5", "6,2", "5,5"})
-  void movePawnIsConsistent(int destinationTileRow, int destinationTileColumn) throws InvalidParameterException {
-    GameBoard gameBoard = new GameBoard();
-    Pawn pawn = new Pawn(gameBoard.getStartingAndDestinationTiles().getFirst().getKey(), gameBoard.getStartingAndDestinationTiles().getFirst().getValue(), Color.black, 10);
+  void moveTest(int destinationTileRow, int destinationTileColumn) throws InvalidParameterException, BuilderException {
+    builderDirector = new BuilderDirector(new StdQuoridorBuilder(2));
+    AbstractGame game = builderDirector.makeGame();
+    AbstractPawn pawn = game.getPawns().get(0);
 
-    Tile destinationTile = gameBoard.getTile(destinationTileRow, destinationTileColumn);
+    Position destinationTilePosition = new Position(destinationTileRow, destinationTileColumn);
+    AbstractTile destinationTile = game.getGameBoard().getTile(destinationTilePosition);
     pawn.move(destinationTile);
-
     Assertions.assertEquals(destinationTile, pawn.getCurrentTile());
   }
 
   @ParameterizedTest
   @CsvSource({"10", "5", "3"})
-  void decrementNumberOfWallsIsConsistent(int numberOfWalls) {
-    GameBoard gameBoard = new GameBoard();
+  void decrementNumberOfWallsTest(int numberOfWalls) throws InvalidParameterException, BuilderException {
+    builderDirector = new BuilderDirector(new StdQuoridorBuilder(2));
+    AbstractGame game = builderDirector.makeGame();
+    AbstractPawn pawn = game.getPawns().get(0);
 
-    Pawn pawn = new Pawn(gameBoard.getStartingAndDestinationTiles().getFirst().getKey(), gameBoard.getStartingAndDestinationTiles().getFirst().getValue(), Color.black, numberOfWalls);
     pawn.decrementNumberOfWalls();
     int expected = numberOfWalls - 1;
     int actual = pawn.getNumberOfWalls();
     Assertions.assertEquals(expected, actual);
   }
 
-  @Test
-  void decrementNumberOfWallsNotAllowedBelowZero() {
-    GameBoard gameBoard = new GameBoard();
+  @ParameterizedTest
+  @CsvSource({"9,4", "0,5", "8,1", "5,5"})
+  void hasReachedDestinationTest(int currentTileRow, int currentTileColumn) throws InvalidParameterException, BuilderException {
+    builderDirector = new BuilderDirector(new StdQuoridorBuilder(2));
+    AbstractGame game = builderDirector.makeGame();
+    AbstractPawn pawn = game.getPawns().get(0);
 
-    Pawn pawn = new Pawn(gameBoard.getStartingAndDestinationTiles().getFirst().getKey(), gameBoard.getStartingAndDestinationTiles().getFirst().getValue(), Color.black, 0);
-
-    Assertions.assertThrows(NumberOfWallsBelowZeroException.class, pawn::decrementNumberOfWalls);
+    Position currentTilePosition = new Position(currentTileRow, currentTileColumn);
+    AbstractTile currentTile = game.getGameBoard().getTile(currentTilePosition);
+    pawn.move(currentTile);
+    Assertions.assertEquals(pawn.hasReachedDestination(), pawn.getDestinationTiles().contains(currentTile));
   }
 }
